refactor(phase7): final cleanup — imports, System.out, tests, docs
[코드 정리]
- ReferenceController: System.out.println → logger.info
- java.sql.* 와일드카드 → 명시적 import 4곳
  (kcd/db/DatabaseManager, medication/db/DatabaseManager,
   ClinicalLabDatabase, SqliteReferenceRepository)
- java.util.* 와일드카드 → 명시적 import 2곳
  (PMHService, PMHPresenter — Timer/TimerTask 누락 발견 후 추가)

[PMHEntry 개선]
- Jackson 역직렬화를 위한 no-args 생성자 추가
- isDefaultDotTarget setter 추가
  → AutoSaveManager의 JSON 왕복 저장/복원이 올바르게 동작

[신규 테스트 — 19개, 누계 app 181개 + server 31개 = 212개]
AutoSaveManagerTest (11개):
  - autoSave: 파일 생성, JSON 내용, 빈 배열
  - restore: 파일 없음, 저장 후 복원, 카테고리/선택 상태 보존, 손상 파일 처리
  - roundTrip: 다수 항목 왕복 직렬화

PatientServiceTest (12개):
  - listPatients, createPatient, getPatient, updatePatient, deletePatient
  - 각각 정상 경로 + 404 예외 경로

[문서]
CLAUDE.md 최종 업데이트:
  - 완료된 패키지 구조 목록 반영
  - 테스트 작성 원칙 추가
  - Import 규칙 명문화

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>